Changed deprecated direct URL to URI